@@ -6,7 +6,10 @@
 package edu.colorado.phet.radiowaves.view;
 
 import java.awt.*;
-import java.awt.event.*;
+import java.awt.event.ActionEvent;
+import java.awt.event.ActionListener;
+import java.awt.event.ComponentAdapter;
+import java.awt.event.ComponentEvent;
 import java.io.IOException;
 
 import javax.swing.*;
@@ -36,30 +39,9 @@ public class EmfControlPanel extends ControlPanel {
     public EmfControlPanel( EmfModel model, EmfModule module ) {
         this.model = model;
         this.module = module;
-        createControls();
-        //        this.setPreferredSize( new Dimension( 180, 580 ) );
-
-//        this.addContainerListener( new ContainerAdapter() {
-//
-//            public void componentRemoved( ContainerEvent e ) {
-//                EmfControlPanel.this.setPreferredSize( EmfControlPanel.this.getSize() );
-//            }
-//        } );
-//        this.addComponentListener( new ComponentAdapter() {
-//
-//            public void componentResized( ComponentEvent e ) {
-//                EmfControlPanel.this.setPreferredSize( EmfControlPanel.this.getSize() );
-//            }
-//        } );
-    }
-
-    private void createControls() {
-        setLayout( new GridBagLayout() );
-        GridBagConstraints gbc = new GridBagConstraints( 0, 0, 1, 1, 1, 1, GridBagConstraints.CENTER, GridBagConstraints.HORIZONTAL, new Insets( 0, 0, 0, 0 ), 0, 0 );
-        gbc.gridy = GridBagConstraints.RELATIVE;
-        add( new Legend(), gbc );
-        add( new MovementControlPane(), gbc );
-        add( new OptionControlPane(), gbc );
+        addControlFullWidth( new Legend() );
+        addControlFullWidth( new MovementControlPane() );
+        addControlFullWidth( new OptionControlPane() );
     }
 
     //
